...
import Foundation

class AccountVisitListFilter {
    
    func sectionNames(isManager: Bool = false) -> [String] {
        var names = [String]()
        names.append("Type")
        names.append("Date Range")
        names.append("Status")
        names.append("Past Visits")
        
        if isManager {
            names.append("My Team")
        }
        
        return names
    }
    
    //var sectionNames : Array<Any>  = ["Type", "Date Range", "Status", "Past Visits"]
    
    var sectionItems : [[Any]] = [ ["Visit", "Event"],
                                      ["","","Today","Tomorrow", "This Week"],
                                      ["Scheduled" , "Planned", "In Progress", "Complete"],
                                      ["Past Visits"]]
    
}

struct AccountVisitListFilterModel {
    
...
