...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                        <state key="normal" title="Plan">
                                            <color key="titleColor" name="Color"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                        <state key="normal" title="Back">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="14"/>
                                        <state key="normal" title="Next">
                                            <color key="titleColor" name="Color"/>
                                        </state>
...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                        <state key="normal" title="Product Name">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                                <rect key="frame" x="-8" y="5" width="47" height="29"/>
                                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                                <state key="normal" title="Source">
                                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                                <rect key="frame" x="0.0" y="5" width="74" height="29"/>
                                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                                <state key="normal" title="PYCM Sold">
                                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                                <rect key="frame" x="0.0" y="5" width="54" height="29"/>
                                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                                <state key="normal" title="Commit">
                                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                                <rect key="frame" x="0.0" y="5" width="30" height="29"/>
                                                                <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="15"/>
                                                                <state key="normal" title="Sold">
                                                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
