...
        searchTextField.textAlignment = NSTextAlignment.left
        let image:UIImage = UIImage(named: "searchIcon")!
        let imageView:UIImageView = UIImageView.init(image: image)
        self.view.bringSubview(toFront : imageView)
        searchTextField.leftView = nil
        //Added attributedPlaceholder with ubuntu font
        searchTextField.attributedPlaceholder = NSAttributedString(string:"Search", attributes: [NSAttributedStringKey.font: UIFont(name: "Ubuntu", size: 18)!])
        searchTextField.rightView = imageView
        searchTextField.rightViewMode = UITextFieldViewMode.always
        
        //self.view.bringSubview(toFront: searchTextField)
    }
    
...
        var cell : UITableViewCell?
        
        if indexPath.section == 1{
            if indexPath.row == 0{
                cell = tableView.dequeueReusableCell(withIdentifier: locationCell, for: indexPath) as! AccountVisitListFilterTableViewCell
                (cell as! AccountVisitListFilterTableViewCell).selectionStyle = .none
                (cell as! AccountVisitListFilterTableViewCell).lblStartDate?.placeholder = "Start"
                (cell as! AccountVisitListFilterTableViewCell).lblStartDate?.tag = 300
                (cell as! AccountVisitListFilterTableViewCell).lblStartDate?.text = AccountVisitListFilterModel.startDate
                (cell as! AccountVisitListFilterTableViewCell).delegate = self
                
            }else if indexPath.row == 1{
                cell = tableView.dequeueReusableCell(withIdentifier: cell3, for: indexPath) as! AccountVisitListFilterTableViewCell
                (cell as! AccountVisitListFilterTableViewCell).selectionStyle = .none
                (cell as! AccountVisitListFilterTableViewCell).lblEndDate?.placeholder = "End"
                (cell as! AccountVisitListFilterTableViewCell).lblEndDate?.tag = 301
                (cell as! AccountVisitListFilterTableViewCell).lblEndDate?.text = AccountVisitListFilterModel.endDate
                (cell as! AccountVisitListFilterTableViewCell).delegate = self
                
            }else{
                cell = tableView.dequeueReusableCell(withIdentifier: filterCell, for: indexPath) as! AccountVisitListFilterTableViewCell
...
